# pr_soloud

./: .gitmodules  CMakeInstall.txt  CMakeLists.txt  Install.cmake  README.md
.github/: pragma_module_info.json
.github/workflows/: pragma-linux-ci.yml
include/: pr_soloud.hpp
src/: pr_soloud.cpp
